# genesis-os-blueprint

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
adr/: ADR-0001-cognitive-kernel.md  ADR-0002-capability-provider.md  ADR-0003-reality-grading.md  ADR-TEMPLATE.md  README.md
docs/: 00-overview.md  01-layered-architecture.md  02-cognitive-kernel-abi.md  03-policy-hook-surface.md  04-capability-provider-model.md  05-reality-grading-loop.md  06-governance-and-constitution.md  07-glossary.md
docs/assets/: social-preview.html
reference/: README.md  pyproject.toml
reference/examples/: run_mission.py
reference/genesis_kernel/: __init__.py  abi.py  hooks.py  kernel.py  policies.py  providers.py  reality_grading.py  telemetry.py
reference/genesis_kernel/subsystems/: __init__.py  execution.py  governance.py  memory.py  planning.py  validation.py
reference/tests/: test_kernel.py
specs/: capability-contract.md  kernel-abi.md  policy-hook-contract.md
